# python-starter

./: README.md  ci.Dockerfile  mkdocs.yml  noxfile.py  pyproject.toml  pytest.ini  ruff.ci.toml  tox.ini
.woodpecker/: build.yaml  lint.yaml  tests.yaml
config/: .secrets.example.toml  settings.toml
docs/: about.md
docs/drafts/: index.draft.md
docs/examples/: example.md
requirements/: requirements.ci.txt  requirements.dev.txt  requirements.txt
src/python_starter/: __init__.py  __main__.py  main.py
src/python_starter/core/: __init__.py  config.py
src/python_starter/system_info/: __init__.py  methods.py
src/python_starter/utils/ex_utils/: __init__.py  methods.py
tests/: conftest.py  test_dummy.py  test_lists.py
tests/fixtures/: dummy.py  list.py
